Remove PackType.java